feat: vault password policy
Signed-off-by: ab0142 <120799552+ab0142@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
   "aiohttp~=3.8.5",
   "asyncstdlib~=3.10.9",
   "lazy-object-proxy~=1.9.0",
+  "jinja~=3.1.2",
 ]
 version = "0.1.0"
 
