--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,9 +39,7 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies:
-          - "types-click~=7.1.8"
-          - "types-dataclasses~=0.6.6"
-          - "types-pyyaml~=6.0.12.12"
+          - "click~=8.1.7"
           - "pydantic~=2.4.2"
 
   - repo: https://github.com/codespell-project/codespell
