--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 license-files = { paths = ["LICENSE"] }
 authors = [
-  { name = "ab0142", email = "120799552+ab0142@users.noreply.github.com" },
+  { name = "hqdncw", email = "hqdncw@gmail.com" },
 ]
 keywords = [
   "hashicorp vault",
@@ -30,18 +30,19 @@ classifiers = [
 dependencies = [
   "click~=8.1.7",
   "pydantic~=2.4.2",
-  "pyyaml~=6.0.1",
+  "ruamel.yaml~=0.18.5",
   "aiohttp~=3.8.5",
   "lazy-object-proxy~=1.9.0",
-  "jinja~=3.1.2",
   "networkx~=3.2.1",
   "more-itertools~=10.1.0",
-  "ironfence~=0.1.0"
+  "ironfence~=0.1.0",
+  # TODO: temporary dependencies
+  "jinja~=3.1.2",
 ]
 version = "0.1.0"
 
 [project.urls]
-Repository = "https://github.com/ab0142/vault-autopilot"
+Repository = "https://github.com/hqdncw/vault-autopilot"
 
 [project.optional-dependencies]
 dev = [
@@ -51,15 +52,10 @@ dev = [
   "mypy~=1.5.1",
   "pre-commit~=3.4.0",
 ]
-types = [
-  "types-click~=7.1.8",
-  "types-dataclasses~=0.6.6",
-  "types-pyyaml~=6.0.12.12",
-]
 
 [tool.black]
 line-length = 88
-target-version = ['py311']
+target-version = ["py311"]
 exclude = '''
 (
     \.git
@@ -108,7 +104,6 @@ module = [
   "lazy_object_proxy.*",
   "networkx.*"
 ]
-ignore_missing_imports = true
 
 [tool.semantic_release]
 build_command = """
