--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,6 +41,8 @@ repos:
         additional_dependencies:
           - "click~=8.1.7"
           - "pydantic~=2.4.2"
+          - "more-itertools~=10.1.0"
+          - "ruamel.yaml~=0.18.5"
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.6
