--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
   "networkx~=3.2.1",
   "ironfence~=0.1.0",
   # TODO: temporary dependencies
-  "jinja~=3.1.2",
+  "jinja2~=3.1.3",
 ]
 version = "0.1.0"
 
