--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,32 +17,31 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.292
+    rev: v0.1.14
     hooks:
     - id: ruff
 
   - repo: https://github.com/psf/black
-    rev: 23.9.1
+    rev: 23.12.1
     hooks:
       - id: black
         files: '^(src)'
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
       - id: isort
         name: isort
         args: [--check]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.6.0
+    rev: v1.8.0
     hooks:
       - id: mypy
         additional_dependencies:
-          - "types-click~=7.1.8"
-          - "types-dataclasses~=0.6.6"
-          - "types-pyyaml~=6.0.12.12"
+          - "click~=8.1.7"
           - "pydantic~=2.4.2"
+          - "ruamel.yaml~=0.18.5"
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.6
@@ -51,6 +50,6 @@ repos:
         additional_dependencies: ["tomli"]
 
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: 3.10.0
+    rev: v3.13.0
     hooks:
       - id: commitizen
