--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,6 +42,7 @@ repos:
           - "click~=8.1.7"
           - "pydantic~=2.4.2"
           - "ruamel.yaml~=0.18.5"
+          - "humanize~=4.9.0"
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.6
