--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ dependencies = [
   "humanize~=4.9.0",
   # TODO: temporary dependencies
   "jinja2~=3.1.3",
+  "deepdiff[optimize]~=7.0.1",
+  "pyhumps~=3.8.0"
 ]
 version = "0.1.0"
 
@@ -53,8 +55,8 @@ cli = [
 #   "colorlog~=6.8.0"
 # ]
 dev = [
-  "basedpyright~=1.10.4",
-  "ruff~=0.4.2",
+  "basedpyright~=1.12.1",
+  "ruff~=0.4.4",
   "mypy~=1.10.0",
   "pre-commit~=3.7.0"
 ]
@@ -74,10 +76,11 @@ exclude = '''
 [tool.ruff]
 line-length = 88
 target-version = "py311"
+lint.extend-select = ["I", "E"]
+lint.fixable = ["ALL"]
 
 [tool.mypy]
 python_version = "3.11"
-python_executable = "./.venv/bin/python"
 show_error_codes = true
 show_error_context = true
 pretty = true
@@ -104,11 +107,12 @@ plugins = [
 module = [
   "lazy_object_proxy",
   "networkx",
-  "ruamel"
+  "ruamel",
+  "deepdiff"
 ]
 ignore_missing_imports = true
 
-[tool.basedpyright]
+[tool.pyright]
 typeCheckingMode = "basic"
 venvPath = "."
 venv = ".venv"
