--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ dependencies = [
   # TODO: temporary dependencies
   "jinja2~=3.1.3",
   "deepdiff[optimize]~=7.0.1",
-  "pyhumps~=3.8.0"
+  "pyhumps~=3.8.0",
+  "cryptography~=42.0.8"
 ]
 version = "0.1.0"
 
