--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ dependencies = [
   "jinja2~=3.1.3",
   "deepdiff[optimize]~=7.0.1",
   "pyhumps~=3.8.0",
-  "cryptography~=42.0.8"
+  "cryptography~=42.0.8",
+  "python-hcl2~=4.3.4"
 ]
 version = "0.1.0"
 
