--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,18 @@ dev = [
   "mypy~=1.10.0",
   "pre-commit~=3.7.0"
 ]
+docs = [
+  "sphinx~=7.3.7",
+  "sphinx-sitemap~=2.6.0",
+  "sphinx-prompt~=1.8.0",
+  "furo~=2024.5.6",
+  "sphinx-autobuild~=2024.4.16",
+  "sphinx-inline-tabs~=2023.4.21",
+  "sphinx-copybutton~=0.5.2",
+  "sphinx-togglebutton-0.3.2",
+  # "sphinx-autoapi~=3.0.0"
+  "sphinx-click~=6.0.0"
+]
 
 [tool.black]
 line-length = 88
