--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
 keywords = [
   "hashicorp vault",
 ]
-license = {text = "MIT"}
+license = "MIT"
 # https://pypi.org/classifiers/
 classifiers = [
   "License :: OSI Approved :: MIT License",
@@ -17,7 +17,6 @@ classifiers = [
   "Development Status :: 2 - Pre-Alpha",
   "Environment :: Console",
   "Framework :: AsyncIO",
-  "Framework :: Hatch",
   "Intended Audience :: Developers",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: Implementation :: PyPy",
@@ -26,17 +25,18 @@ classifiers = [
 ]
 dependencies = [
   "pydantic~=2.7.1",
+  "pydantic-settings~=2.3.3",
   "aiohttp~=3.9.5",
   "lazy-object-proxy~=1.9.0",
   "networkx~=3.3.0",
   "ironfence~=0.1.0",
   "humanize~=4.9.0",
-  # TODO: temporary dependencies
-  "jinja2~=3.1.3",
   "deepdiff[optimize]~=7.0.1",
   "pyhumps~=3.8.0",
   "cryptography~=42.0.8",
-  "python-hcl2~=4.3.4"
+  # TODO: temporary dependencies (derived from _pkg.asyva)
+  "python-hcl2~=4.3.4",
+  "jinja2~=3.1.3",
 ]
 version = "0.1.0"
 
@@ -57,11 +57,6 @@ dev = [
   "ruff~=0.4.4",
   "mypy~=1.10.0",
   "pre-commit~=3.7.0"
-]
-build = [
-  "wheel",
-  "setuptools",
-  "build"
 ]
 docs = [
   "sphinx~=7.3.7",
