build: add CI/CD pipelines
Refs: #22

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,33 +23,30 @@ COPY ./pyproject.toml .
 
 # prepare pip for buildkit cache
 ARG PIP_CACHE_DIR=/var/cache/buildkit/pip
-ENV PIP_CACHE_DIR ${PIP_CACHE_DIR}
-RUN mkdir -p $PIP_CACHE_DIR
+ENV PIP_CACHE_DIR=$PIP_CACHE_DIR
 
 RUN --mount=type=cache,target=$PIP_CACHE_DIR,sharing=locked \
+  mkdir -p $PIP_CACHE_DIR && \
   pip install .[cli]
 
 COPY ./src/ ./src/
 COPY ./README.md ./README.md
 
-FROM gcr.io/distroless/python3-debian12:latest AS runtime
-
-LABEL org.opencontainers.image.authors="hqdncw@gmail.com"
-LABEL org.opencontainers.image.source="https://github.com/hqdncw/vault-autopilot"
-LABEL org.opencontainers.image.description="Vault-Autopilot CLI"
+FROM gcr.io/distroless/python3-debian12@sha256:e8e50bc861b16d916f598d7ec920a8cef1e35e99b668a738fe80c032801ceb78 AS runtime
 
 ARG VENV_DIR="/opt/venv"
 COPY --from=build $VENV_DIR $VENV_DIR
 ENV PATH="$VENV_DIR/bin:$PATH"
 
 ARG DIST_DIR="/usr/local/src"
-COPY --from=build --chmod=444 $DIST_DIR $DIST_DIR
+COPY --from=build --chmod=400 $DIST_DIR $DIST_DIR
 
 WORKDIR /srv/vault-autopilot
 
 ENV PYTHONPATH="$DIST_DIR/vault-autopilot/src/:$VENV_DIR/lib/python3.11/site-packages:$PYTHONPATH"
 ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONFAULTHANDLER 1
-ENV PYTHONOPTIMIZE 1
+ENV PYTHONUNBUFFERED=1
 
-ENTRYPOINT ["/usr/bin/python3.11", "-m", "vault_autopilot"]
+RUN [ "python3", "-m", "compileall", "$DIST_DIR", "/usr/lib/python3.11" ]
+
+ENTRYPOINT ["python", "-m", "vault_autopilot"]
