--- a/.github/workflows/code-review.yaml
+++ b/.github/workflows/code-review.yaml
@@ -12,4 +12,17 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.11.2
+          cache: pip
+
+      - name: Create Python virtual environment
+        run: "python3 -m venv .venv"
+
+      - name: Install dependencies
+        run: |
+          bash ./shell_scripts/install_dependencies.sh cli
+
       - uses: pre-commit/action@v3.0.1
