--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,6 +126,9 @@ ignore_missing_imports = true
 
 [tool.pyright]
 typeCheckingMode = "basic"
+# https://github.com/DetachHead/basedpyright-pre-commit-mirror/blob/main/README.md#usage
+venvPath = "."
+venv = ".venv"
 
 [tool.semantic_release]
 build_command = """
