build: added missing output for successful docs and image deploy

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-22.04
     outputs:
       tag: ${{ steps.release.outputs.tag }}
+      released: ${{ steps.release.outputs.released }}
     concurrency: push
     permissions:
       id-token: write
